# devops-engineer

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/00_curriculum/: curriculum.html
docs/0_introduction/: 00_preface.html  0_foreword.html  1_devops.html  2_roadmap.html  3_life_cycle.html  4_scrum_agile.html  TODO.html
docs/1_system_design/: 0_computer_network.html  1_how_code_works.html  2_environments.html  3_microservices.html  4_introduction_to_linux.html  5_getting_around.html  6_setup_infra.html  7_system_design.html  TODO.html
docs/7_pipelines/: 0_introduction.html  1_getting_started.html  ANSWERS.html  TODO.html
docs/_sources/: index.rst.txt
docs/_sources/00_curriculum/: curriculum.rst.txt
docs/_sources/0_introduction/: 00_preface.rst.txt  3_life_cycle.rst.txt
docs/_sources/1_system_design/: 3_microservices.rst.txt  6_setup_infra.rst.txt
source/: conf.py  index.rst
source/0_introduction/: 0_foreword.rst  1_devops.rst  2_roadmap.rst  4_scrum_agile.rst  TODO.rst
source/1_system_design/: 0_computer_network.rst  1_how_code_works.rst  2_environments.rst  7_system_design.rst
source/7_pipelines/: 0_introduction.rst  1_getting_started.rst  ANSWERS.rst  TODO.rst
source/diagrams/editable/drawio/: KubernetesDeployment.drawio  ci_cd.drawio  cloud.drawio  decomposing.drawio  deployment_on_k8s.drawio  devops_merge.drawio  devops_roadmap.drawio  github_actions.drawio  kubernetesArch.drawio  sdlc_methodologies.drawio  specialist_vs_generalist.drawio
